--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,9 @@
 # misc
 .DS_Store
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/src/Server/.env
+/src/Server/node_modules
+.env
 
 npm-debug.log*
 yarn-debug.log*
