--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "react-mongodb-todo",
   "version": "0.1.0",
   "private": true,
-<<<<<<< HEAD
   "proxy": "http://localhost:3030",
-=======
-  "proxy":"http://localhost:3030",
->>>>>>> 6eba363db7e7f1722e7e81de82d609598f894ac6
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -23,8 +19,10 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
